FLOW-53 환경 변수 설정 및 testController 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
 spring:
-  application:
-    name: flow-main
+  profiles:
+    group:
+      "local": "local"
+      "dev": "dev"
+      "prd": "prd"
