FLOW-60 dev, prd에 로그인 관련 환경변수 설정

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -13,6 +13,12 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  jwt:
+    secret: ${JWT_SECRET}
+    access:
+      expiration: ${ACCESS_EXPIRATION}
+    refresh:
+      expiration: ${REFRESH_EXPIRATION}
 
 auth:
   uri: ${FLOW_MAIN_URI}
