--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,18 +1,10 @@
 spring:
   application:
     name: flow-api-gateway
-  datasource:
+  r2dbc:
     url: ${DB_URL}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
-    driver-class-name: org.postgresql.Driver
-  jpa:
-    hibernate:
-      ddl-auto: none # Hibernate DDL (none, validate, update, create-drop)
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
   jwt:
     secret: ${JWT_SECRET}
     access:
