--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -18,9 +18,19 @@ spring:
           uri: ${MAIN_ROUTE_ADDRESS}
           predicates:
             - Path=/auth/**
+          filters:
+            - name: LoggingFilter
+        - id: order-route
+          uri: ${PAYMENT_ROUTE_ADDRESS}
+          predicates:
+            - Path=/order/**
+          filters:
+            - name: LoggingFilter
+            - name: AuthenticationFilter
         - id: payment-route
           uri: ${PAYMENT_ROUTE_ADDRESS}
           predicates:
-            - Path=/**
+            - Path=/payment/**
           filters:
+            - name: LoggingFilter
             - name: AuthenticationFilter
