--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,12 +5,6 @@ spring:
     url: ${DB_URL}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
-  jwt:
-    secret: ${JWT_SECRET}
-    access:
-      expiration: ${ACCESS_EXPIRATION}
-    refresh:
-      expiration: ${REFRESH_EXPIRATION}
   cloud:
     gateway:
       routes:
@@ -34,3 +28,9 @@ spring:
           filters:
             - name: LoggingFilter
             - name: AuthenticationFilter
+logging:
+  level:
+    root: INFO
+    org.springframework.cloud.gateway: DEBUG
+    org.springframework.web: DEBUG
+    org.flow.gateway.common.log.LoggingFilter: DEBUG
