feat: 속도 최적화 로그

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -31,4 +31,4 @@ logging:
         gateway:
           common:
             log:
-              LoggingFilter: DEBUG
+              LoggingFilter: INFO
