feat: gateway 설정

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -97,6 +97,11 @@ spring:
             - Path=/coffee/**
           filters:
             - name: AuthenticationFilter
+
+        - id: admin-route-auth
+          uri: ${ADMIN_ROUTE_ADDRESS}
+          predicates:
+            - Path=/api/admin/**
 logging:
   level:
     org:
