--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,6 +7,17 @@ spring:
     password: ${DB_PASSWORD}
   cloud:
     gateway:
+      globalcors:
+        cors-configurations:
+          '[/**]': # 모든 경로에 대해 CORS 설정을 적용
+            allowedOrigins: ${FLOW_WEB_ADDRESS} # 요청을 허용할 출처
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+              - DELETE
+            allowedHeaders: "*"
+            allowCredentials: true
       routes:
         - id: admin-route-non-auth
           uri: ${ADMIN_ROUTE_ADDRESS}
