--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -10,7 +10,9 @@ spring:
       globalcors:
         cors-configurations:
           '[/**]': # 모든 경로에 대해 CORS 설정을 적용
-            allowedOrigins: ${FLOW_WEB_ADDRESS} # 요청을 허용할 출처
+            allowedOrigins:
+              - ${FLOW_WEB_ADDRESS}
+              - ${FLOW_ADMIN_ADDRESS}
             allowedMethods:
               - GET
               - POST
