--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -51,6 +51,7 @@ spring:
           uri: ${PAYMENT_ROUTE_ADDRESS}
           predicates:
             - Path=/order/**
+            - Method=POST
           filters:
             - name: AuthenticationFilter
 
