--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -108,6 +108,7 @@ spring:
           uri: ${MAIN_ROUTE_ADDRESS}
           predicates:
             - Path=/coffee/**
+            - Method=POST
           filters:
             - name: AuthenticationFilter
 logging:
