feat: cors SecurityConfig 설정 수정
- setAllowedOrigins 여러개 쓰면 마지막 것만 적용됨

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -115,7 +115,7 @@ spring:
           uri: ${MAIN_ROUTE_ADDRESS}
           predicates:
             - Path=/user/**
-            - Method=PATCH,DELETE
+            - Method=POST,PATCH,DELETE
           filters:
             - name: AuthenticationFilter
 
