fix : Payment 관련 API 추가

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -60,6 +60,13 @@ spring:
           uri: ${PAYMENT_ROUTE_ADDRESS}
           predicates:
             - Path=/payment/**
+            - Method=GET
+
+        - id: payment-route
+          uri: ${PAYMENT_ROUTE_ADDRESS}
+          predicates:
+            - Path=/payment/**
+            - Method=POST,PATCH,DELETE
           filters:
             - name: AuthenticationFilter
 
